# octra-ide

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  crypto_utils.hpp  main.cpp  rpc_client.hpp  setup.sh
.github/workflows/: linux-build.yml  linux-release.yml  macos-release.yml  windows-build.yml  windows-release.yml
cmake/toolchains/: mingw-qt6-x86_64.cmake
dictionary-dapp/: app.js  index.html  style.css
lib/: pvac_bridge.hpp  txcache.hpp
native/: octra_core.cpp  octra_core.hpp  qt_app_bridge.cpp  qt_app_bridge.hpp  qt_main.cpp
native/qml/: Main.qml
packaging/windows/: README-signing.md  installer.nsi
static/: bridge.html  circles.html  index.html  style.css  swap.js  wallet.js
static/templates/: index.json
static/templates/dictionary/: main.aml
tools/: octra_cli.cpp
